# Llamaindex-similarity

./: Readme.md  pyproject.toml
VectorStoreIndex/: with_similarity_cutoff.py  with_similarity_cutoff_response_synthesizer.py
WeaviateVectorStore/: with_similarity_cutoff.py  without_similarity_cutoff.py
files/: doc1.txt  doc2.txt  doc3.txt
